Fixed incorrect a tag spacing

--- a/neilclack/static/sass/global.scss
+++ b/neilclack/static/sass/global.scss
@@ -121,3 +121,10 @@ footer {
 footer {
     margin-top: auto;
 }
+
+p {
+    a {
+        padding: 0;
+        margin: 0;
+    }
+}
